Testing out approaches to case and accent sensitivity

--- a/Lifti.Tests/Lifti.Tests.csproj
+++ b/Lifti.Tests/Lifti.Tests.csproj
@@ -17,4 +17,19 @@
     <ProjectReference Include="..\Lifti.Core\Lifti.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="TestResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>TestResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="TestResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>TestResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
