--- a/Lifti.Tests/Lifti.Tests.csproj
+++ b/Lifti.Tests/Lifti.Tests.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\PerformanceProfiling\WikipediaDataLoader.cs" Link="WikipediaDataLoader.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\PerformanceProfiling\WikipediaPages.dat" Link="WikipediaPages.dat" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
