Added FxCop analysis

--- a/Lifti.Core/Lifti.Core.csproj
+++ b/Lifti.Core/Lifti.Core.csproj
@@ -4,11 +4,23 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2</TargetFramework>
     <RootNamespace>Lifti</RootNamespace>
+    <Authors>Mike Goatly</Authors>
+    <Product>Lifti</Product>
+    <Description>A simple to use in-memory full text indexing library.</Description>
+    <PackageProjectUrl>https://github.com/mikegoatly/lifti</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mikegoatly/lifti</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Full Text Search Index Indexing</PackageTags>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.7.0" />
     <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.0.0-preview9.19421.4" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
