--- a/samples/TestConsole/TestConsole.csproj
+++ b/samples/TestConsole/TestConsole.csproj
@@ -2,9 +2,28 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="StemmerTestCases.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="StemmerTestCases.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Lifti.Core\Lifti.Core.csproj" />
