--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,3 +51,4 @@ stages:
         packagesToPack: 'src/Lifti.Core/Lifti.Core.csproj'
         versioningScheme: 'off'
         buildProperties: '-p:PackageVersion=$(majorVersion).$(minorVersion).$(patchVersion)'
+        verbosityPack: 'Diagnostic'
