--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
       inputs:
         command: 'pack'
         packagesToPack: '$(project)'
-        packDirectory: '$(Build.ArtifactStagingDirectory)/ci'
+        packDirectory: '$(Build.ArtifactStagingDirectory)/packages/ci'
         versioningScheme: 'byPrereleaseNumber'
         majorVersion: '$(majorVersion)'
         minorVersion: '$(minorVersion)'
@@ -45,7 +45,7 @@ stages:
       inputs:
         command: 'pack'
         packagesToPack: 'src/Lifti.Core/Lifti.Core.csproj'
-        packDirectory: '$(Build.ArtifactStagingDirectory)/release'
+        packDirectory: '$(Build.ArtifactStagingDirectory)/packages/release'
         versioningScheme: 'off'
         buildProperties: 'PackageVersion=$(majorVersion).$(minorVersion).$(patchVersion)'
         verbosityPack: 'Normal'
@@ -74,7 +74,7 @@ stages:
     - task: DotNetCoreCLI@2
       inputs:
         command: 'push'
-        packagesToPush: '$(Pipeline.Workspace)/ci/*.nupkg'
+        packagesToPush: '$(Pipeline.Workspace)/packages/ci/*.nupkg'
         nuGetFeedType: 'internal'
         publishVstsFeed: '21c23043-21b0-4e5a-8557-00b88fc52fd4/9f4e269d-a35a-4657-b2a3-b56b01c01f8c'
 
@@ -95,6 +95,6 @@ stages:
            displayName: 'Push NuGet Package'
            inputs:
              command: 'push'
-             packagesToPush: '$(Pipeline.Workspace)/release/*.nupkg'
+             packagesToPush: '$(Pipeline.Workspace)/packages/release/*.nupkg'
              nuGetFeedType: 'external'
              publishFeedCredentials: 'NuGet'
