Changed version and package name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,9 @@ trigger:
 - master
 
 variables:
-  majorVersion: 0
+  majorVersion: 2
   minorVersion: 1
-  patchVersion: 0
+  patchVersion: 0-beta
   project: src/Lifti.Core/Lifti.Core.csproj
   testProject: test/Lifti.Tests/Lifti.Tests.csproj
 
