Refactored index construction to use a builder method Renamed Index to Add Added AddRange method to index Renamed SearchResult.Item to SearchResult.Key (It's the key that's returned, not the item)

--- a/src/Lifti.Core/Lifti.Core.csproj
+++ b/src/Lifti.Core/Lifti.Core.csproj
@@ -16,6 +16,7 @@
     <Copyright>Mike Goatly</Copyright>
     <PackageLicenseFile></PackageLicenseFile>
     <PackageReleaseNotes>First version of the new rewrite</PackageReleaseNotes>
+    <AssemblyName>Lifti.Core</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
