Change VM image for deploy process

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,7 +119,7 @@ stages:
   jobs:
   - job: PublishCI
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'windows-latest'
       
     steps:
     - checkout: none
