Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ stages:
         zipAfterPublish: false
         modifyOutputPath: false
 
-    - publish: '$(Build.ArtifactStagingDirectory)/blazorsample'
+    - publish: '$(Build.ArtifactStagingDirectory)/blazorsample/BlazorApp/dist'
       artifact: 'blazorsample'
 
     - publish: '$(Build.ArtifactStagingDirectory)/packages'
