Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,4 +137,4 @@ stages:
         Destination: 'AzureBlob'
         storage: 'liftidemo'
         ContainerName: '$web'
-        AdditionalArgumentsForBlobCopy: /Y /S
+        AdditionalArgumentsForBlobCopy: /Y /S /SetContentType
