--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,16 @@
 trigger:
-- master
+  branches:
+    include:
+    - master
+  paths:
+    exclude:
+    - docs/*
+    - README.md
 
 variables:
   majorVersion: 2
   minorVersion: 0
-  patchVersion: 0-beta5
+  patchVersion: 0-beta6
   project: src/Lifti.Core/Lifti.Core.csproj
   testProject: test/Lifti.Tests/Lifti.Tests.csproj
   buildConfiguration: 'Release'
