Changed theme and added query syntax doc

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,4 @@
 title: LIFTI
 source: docs
-description: >- 
-  LIFTI is a netstandard2.0 compatible in-memory full text index library
-baseurl: "lifti" 
-url: "" 
-twitter_username: mikegoatly
-github_username:  mikegoatly
 
-theme: jekyll-theme-tactile
+theme: jekyll-theme-leap-day
