Added nullable reference type support

--- a/src/Lifti.Core/Lifti.Core.csproj
+++ b/src/Lifti.Core/Lifti.Core.csproj
@@ -17,6 +17,8 @@
     <PackageLicenseFile></PackageLicenseFile>
     <PackageReleaseNotes>First version of the new rewrite</PackageReleaseNotes>
     <AssemblyName>Lifti.Core</AssemblyName>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
