--- a/test/PerformanceProfiling/PerformanceProfiling.csproj
+++ b/test/PerformanceProfiling/PerformanceProfiling.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.2;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,13 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
-    <PackageReference Include="LIFTI" Version="1.1.6-beta" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Lifti.Core\Lifti.Core.csproj">
-      <Aliases>LiftiNew</Aliases>
-    </ProjectReference>
+    <ProjectReference Include="..\..\src\Lifti.Core\Lifti.Core.csproj" />
   </ItemGroup>
 </Project>
