Reduce verbosity of restore logging

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ stages:
       inputs:
         command: restore
         projects: '**/*.csproj'
+        verbosityRestore: 'Normal'
     - task: DotNetCoreCLI@2
       displayName: Run unit tests
       inputs:
