--- a/test/Lifti.Tests/Lifti.Tests.csproj
+++ b/test/Lifti.Tests/Lifti.Tests.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <LangVersion>7.3</LangVersion>
+	<Nullable>enable</Nullable>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
-
+	
   <ItemGroup>
     <None Remove="Tokenization\Stemming\StemmerTestCases.txt" />
   </ItemGroup>
