--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,11 @@ stages:
     pool:
       vmImage: 'windows-latest'
 
-    steps:   
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '6.0.x'
     - task: DotNetCoreCLI@2
       displayName: "NuGet Restore"
       inputs:
