--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,12 @@ stages:
 
     steps:
     - task: UseDotNet@2
+      displayName: "Use .NET 6"
+      inputs:
+        packageType: 'sdk'
+        version: '6.0.x'
+    - task: UseDotNet@2
+      displayName: "Use .NET 7"
       inputs:
         packageType: 'sdk'
         version: '7.0.x'
