--- a/test/PerformanceProfiling/PerformanceProfiling.csproj
+++ b/test/PerformanceProfiling/PerformanceProfiling.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0;net7.0;;netframework4.8.1</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0;netframework4.8.1</TargetFrameworks>
 	  <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
