--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,11 @@ stages:
       inputs:
         packageType: 'sdk'
         version: '7.0.x'
+    - task: UseDotNet@2
+      displayName: "Use .NET 8"
+      inputs:
+        packageType: 'sdk'
+        version: '8.0.x'
     - task: DotNetCoreCLI@2
       displayName: "NuGet Restore"
       inputs:
