--- a/.editorconfig
+++ b/.editorconfig
@@ -213,7 +213,7 @@ csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimenta
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
-csharp_style_prefer_primary_constructors = true:suggestion
+csharp_style_prefer_primary_constructors = false:suggestion
 
 [*.{cs,vb}]
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
@@ -250,3 +250,4 @@ dotnet_style_qualification_for_field = true:silent
 dotnet_style_qualification_for_property = true:silent
 dotnet_style_qualification_for_method = true:silent
 dotnet_style_qualification_for_event = true:silent
+dotnet_style_prefer_collection_expression = true:suggestion
