--- a/test/PerformanceProfiling/PerformanceProfiling.csproj
+++ b/test/PerformanceProfiling/PerformanceProfiling.csproj
@@ -4,6 +4,7 @@
 		<OutputType>Exe</OutputType>
 		<TargetFrameworks>net6.0;net7.0;net8.0;netframework4.8.1</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
