Working on improvements to blazor test ui

--- a/samples/Blazor/Blazor.csproj
+++ b/samples/Blazor/Blazor.csproj
@@ -9,7 +9,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Services\InitialPages.json" />
+	  <None Remove="Services\InitialPages.dat" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Services\InitialPages.dat" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Services\InitialPages.json" />
 	</ItemGroup>
 
 	<ItemGroup>
