--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,16 @@ stages:
 
     steps:
     - task: UseDotNet@2
+      displayName: "Use .NET 6"
+      inputs:
+        packageType: 'sdk'
+        version: '6.0.x'
+    - task: UseDotNet@2
+      displayName: "Use .NET 8"
+      inputs:
+        packageType: 'sdk'
+        version: '8.0.x'
+    - task: UseDotNet@2
       displayName: "Use .NET 9"
       inputs:
         packageType: 'sdk'
